Calculadora/Calculadora.jj
options
{
  JDK_VERSION = "1.5";
  STATIC = false;
}

PARSER_BEGIN(Calculadora)
	public class Calculadora {
		private void emit(String s){
		    System.out.print(s + " ");
		}
	}
PARSER_END(Calculadora)

SKIP : { " " | "\t" | "\n" | "\r" }
TOKEN : { < NUMBER : (["0"-"9"])+ | (["0"-"9"])+ "." (["0"-"9"])+ > }

double Start() : {}
{
  	{ double resultado; }
	(resultado = Expr() ";"
	{ return resultado; }
	)*
}

double Expr() : { double i; double value; }
{
	value = Termo()
	("+" i = Termo() { value += i; } | "-" i = Termo() { value -= i ; })*
	{ return value; }
}

double Fator() : { Token t; double d; }
{
	t = <NUMBER>
	{ return Double.parseDouble( t.image ); }
	| "(" d=Expr() ")" { return d; } | "-" d=Fator()
	{ return -d ; }
}

double Termo() : { double i; double value; }
{
	value = Fator()
	( "*" i = Fator() { value *= i; } | "/" i = Fator() { value /= i; } | "^" i = Fator() { value = Math.pow(value, i); })*
	{ return value ; }
}
